--- a/style.css
+++ b/style.css
@@ -1,8 +1,24 @@
 html, body {
+  height: 100%;
+  /*
   margin: 0;
   padding: 0;
+  */
 }
 
+/*
 canvas {
   display: block;
+}
+*/
+
+body {
+  margin: 0;
+  display: flex;
+
+  /* This centers our sketch horizontally. */
+  justify-content: center;
+
+  /* This centers our sketch vertically. */
+  align-items: center;
 }
